# kvdb

./: README.md  pyproject.toml  run.sh
app/: __init__.py  helpers.py  loggers.py  models.py  routes.py
app/static/: style.css
app/templates/: admin.html  base.html  dashboard.html  dashboard_create.html  dashboard_manage.html  endpoints.html  index.html  swagger_ui.html
